@@ -2,6 +2,10 @@ SubVersion: $Id$
 
 Log:
 
+- 29/01/2005, version 4.5.6: roms
+	Fixed TI89 unit to support Titanium FLASH transfers.
+	To fix: TI84+ !
+
 - 02/10/2004, version 4.5.5: roms
 	Replaced VTi's TI83+ ROM dumper by a new one developped by 	
 	"Benjamin Moody" <bmoody@WPI.EDU>. Works with 83+(SE)/84+(SE).
